Fixing Transform simple Colab
PiperOrigin-RevId: 334049720

--- a/docs/tutorials/transform/simple.ipynb
+++ b/docs/tutorials/transform/simple.ipynb
@@ -3,7 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "Ifon2ScEAsJO"
       },
       "source": [
@@ -20,7 +19,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "tghWegsjhpkt"
       },
       "source": [
@@ -32,8 +30,6 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "colab": {},
-        "colab_type": "code",
         "id": "rSGJWC5biBiG"
       },
       "outputs": [],
@@ -54,7 +50,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "mPt5BHTwy_0F"
       },
       "source": [
@@ -77,7 +72,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "6c8lD3uQm8m5"
       },
       "source": [
@@ -90,8 +84,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {},
-        "colab_type": "code",
         "id": "EmiQXNLZm8z-"
       },
       "outputs": [],
@@ -106,61 +98,38 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "hiBxgnc-m8-X"
       },
       "source": [
-        "### Install TensorFlow\n",
+        "### Install TensorFlow Transform\n",
         "\n",
-        "**Note: In Google Colab, because of package updates, the first time you run this cell you must restart the runtime (Runtime \u003e Restart runtime ...).**"
+        "**Note: In Google Colab, because of package updates, the first time you run this cell you may need to restart the runtime (Runtime \u003e Restart runtime ...).**"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {},
-        "colab_type": "code",
         "id": "j2CTKbMNm9I4"
       },
       "outputs": [],
       "source": [
-        "!pip install tensorflow==2.2.0"
+        "!pip install -q -U apache-beam==2.24.0 tensorflow_transform==0.24.1"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "RptgLn2RYuK3"
       },
       "source": [
-        "## Python check and imports\n",
-        "First, we'll make sure that we're using Python 3. Then, we'll go ahead and install and import the stuff we need."
+        "## Imports"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {},
-        "colab_type": "code",
-        "id": "tFcdSuXTidhH"
-      },
-      "outputs": [],
-      "source": [
-        "import sys\n",
-        "\n",
-        "# Confirm that we're using Python 3\n",
-        "assert sys.version_info.major is 3, 'Oops, not running Python 3. Use Runtime \u003e Change runtime type'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {},
-        "colab_type": "code",
         "id": "K4QXVIM7iglN"
       },
       "outputs": [],
@@ -172,17 +141,8 @@
         "import urllib.request\n",
         "import zipfile\n",
         "\n",
-        "print(\"Installing dependencies for Colab environment\")\n",
-        "!pip install -Uq grpcio==1.26.0\n",
-        "\n",
         "import tensorflow as tf\n",
-        "\n",
-        "print('Installing Apache Beam')\n",
-        "!pip install -Uq apache_beam==2.16.0\n",
         "import apache_beam as beam\n",
-        "\n",
-        "print('Installing TensorFlow Transform')\n",
-        "!pip install -Uq tensorflow-transform==0.15.0\n",
         "import tensorflow_transform as tft\n",
         "\n",
         "import apache_beam.io.iobase\n",
@@ -194,7 +154,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "CxOxaaOYRfl7"
       },
       "source": [
@@ -209,8 +168,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {},
-        "colab_type": "code",
         "id": "-R236Tkf_ON3"
       },
       "outputs": [],
@@ -232,7 +189,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "Zadh6MXLS3eD"
       },
       "source": [
@@ -249,8 +205,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {},
-        "colab_type": "code",
         "id": "H2wANNF_2dCR"
       },
       "outputs": [],
@@ -275,7 +229,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "cSl9qyTCbBKR"
       },
       "source": [
@@ -302,8 +255,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {},
-        "colab_type": "code",
         "id": "mAF9w7RTZU7c"
       },
       "outputs": [],
@@ -327,7 +278,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "NO6LyTneNndy"
       },
       "source": [
